--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "framer-motion": "^12.23.25",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,8 +28,10 @@
     "@types/node": "^20",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
+    "cross-fetch": "^4.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
