--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.563.0",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.4.2"
